<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hapticebook.EditActivity" >

    <FrameLayout
        android:id="@+id/edit_image_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <nxr.tpad.lib.views.FrictionMapView
            android:id="@+id/edit_feel_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/edit_feel_image" />

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/page_image" />
    </FrameLayout>

    <!--
    The layout_height should be changed to wrap_content in the future (I think)
    if we the icons are all in the same size
    -->

    <LinearLayout
        android:id="@+id/tool_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80999999"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/edit_tool_feel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/edit_tool_feel"
            android:src="@drawable/touch" >
        </ImageView>

        <!-- We no longer need the paint button, the function is put in the feel button -->
        <!--
        <ImageView
            android:id="@+id/edit_tool_paint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/edit_tool_edit"
            android:src="@drawable/paintbrush" >
        </ImageView>
        -->

        <ImageView
            android:id="@+id/edit_tool_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/edit_tool_record"
            android:src="@drawable/record" >
        </ImageView>

        <ImageView
            android:id="@+id/edit_tool_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/edit_tool_play"
            android:src="@drawable/audio" >
        </ImageView>

        <ImageView
            android:id="@+id/edit_tool_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/edit_tool_save"
            android:src="@drawable/check_save_blue" >
        </ImageView>
    </LinearLayout>

    <ImageView
        android:id="@+id/edit_tool_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/edit_tool_cancel"
        android:maxHeight="60dp"
        android:maxWidth="60dp"
        android:src="@drawable/cancel" />

    <ProgressBar
        android:id="@+id/pbHeaderProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" >
    </ProgressBar>

</RelativeLayout>